@startuml

title Domain Model

class Main
Main -down-> UserController
Main -down-> OrderController
Main -down-> CupcakeController
Main -down-> AdminController
Main -down-> BasketController
Main -down-> ThymeleafConfig


AdminController --|> AdminMapper
AdminController --|> UserMapper
AdminController --|> ConnectionPool
AdminController --|> DatabaseException
AdminController --|> CupcakeTop
AdminController --|> CupcakeBottom
AdminController --|> Order
AdminController --|> OrderDetails

BasketController --|> BasketMapper
BasketController --|> DatabaseException
BasketController --|> CupcakeMapper
BasketController --|> CupcakeTop
BasketController --|> CupcakeBottom
BasketController --|> Basket
BasketController --|> ConnectionPool

CupcakeController --|> CupcakeMapper
CupcakeController --|> DatabaseException
CupcakeController --|> CupcakeTop
CupcakeController --|> CupcakeBottom
CupcakeController --|> ConnectionPool


UserController --|> UserMapper
UserController --|> ConnectionPool
UserController --|> DatabaseException


OrderController --|> OrderMapper
OrderController --|> OrderDetails
OrderController --|> Basket
OrderController --|> User
OrderController --|> UserMapper
OrderController --|> Cupcake
OrderController --|> ConnectionPool
OrderController --|> DatabaseException

AdminMapper --|> Order
AdminMapper --|> OrderDetails
AdminMapper --|> User
AdminMapper --|> ConnectionPool

CupcakeMapper --|> CupcakeTop
CupcakeMapper --|> CupcakeBottom
CupcakeMapper --|> ConnectionPool

OrderMapper --|> Order
OrderMapper --|> ConnectionPool
OrderMapper --|> Cupcake
OrderMapper --|> OrderDetails

UserMapper --|> ConnectionPool
UserMapper --|> DatabaseException
UserMapper --|> User


Cupcake --|> CupcakeTop
Cupcake --|> CupcakeBottom

Basket --|> Cupcake


class UserMapper
class AdminMapper
class CupcakeMapper
class OrderMapper
class ConnectionPool
class DatabaseException
class User
class UserController
class AdminController
class BasketController
class CupcakeController
class OrderController
class ThymeleafConfig
class Order
class OrderDetails
class CupcakeTop
class CupcakeBottom
class Basket
class Cupcake




@enduml
